# Misaki

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  misaki.yaml
crates/misaki-core/: Cargo.toml
crates/misaki-core/src/: cache.rs  circuit_breaker.rs  config.rs  error.rs  lib.rs  recovery.rs  schema.rs  validation.rs
crates/misaki-core/src/providers/: anthropic.rs  gemini.rs  mock.rs  mod.rs  openai.rs
crates/misaki-core/tests/: integration_tests.rs
crates/misaki-proxy/: Cargo.toml
crates/misaki-proxy/src/: main.rs
