[package]
name = "misaki-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
jsonschema = "0.29"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
futures-util = "0.3"
schemars = "0.8"
