[package]
name = "misaki-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
misaki-core = { path = "../misaki-core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.8", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures-util = "0.3"
